@@ -8,6 +8,8 @@ Fixed: If the ping statement did not explicitly specify an outgoing address but 
 
 Fixed: Monit may crash upon stopping if the ping statement is used in conjunction with the address option.
 
+Fixed: If a directory is set in the 'allow' option of the 'set httpd' statement, instead of file or string, Monit hangs on start.
+
 
 Version 5.34.2
 
